# awesome-tidyup

./: .gitignore  LICENSE  README.md  pyproject.toml
src/awesome_tidyup/: extract_access_scores.py  extract_files.py  extract_tidyup.py  run_all.py
