[project]
authors = [{name = "sosucat", email = "pengu1n.i843@gmail.com"}]
dependencies = []
name = "awesome-tidyup"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
awesome_tidyup = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
beautifulsoup4 = ">=4.14.3,<5"
