[project]
authors = [{name = "Sosuke Ichihashi", email = "pengu1n.i843@gmail.com"}]
dependencies = []
name = "awesome-tidyup"
requires-python = ">=3.11"
version = "0.1.0"

[project.scripts]
tidyup-extract = "awesome_tidyup.extract_tidyup:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
# Support Windows, Linux and macOS platforms
platforms = ["win-64", "linux-64", "osx-64"]

[tool.pixi.pypi-dependencies]
awesome_tidyup = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
# Use a cross-platform Python range compatible with common Ubuntu/macOS installers
python = ">=3.11,<3.13"
beautifulsoup4 = ">=4.9,<5"
